--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -655,33 +655,33 @@ es:
       "Copy": "Copiar"
       "Create link": "Crear Link"
       "Cut": "Cortar"
-      "Decrease font size": "Disminuir tamaÃ±o fuente"
+      "Decrease font size": "Disminuir tamaño fuente"
       "Fullscreen": ""
       "Header 1": "Titulo 1"
       "Header 2": "Titulo 2"
       "Header 3": "Titulo 3"
       "View source code": "Ver fuente"
-      "Increase font size": "Aumentar tamaÃ±o fuente"
-      "Indent": "Agregar SangrÃ­a"
+      "Increase font size": "Aumentar tamaño fuente"
+      "Indent": "Agregar Sangría"
       "Insert Horizontal Rule": "Insertar linea horizontal"
       "Insert image": "Insertar Imagen"
-      "Insert Ordered List": "Insertar lista numÃ©rica"
+      "Insert Ordered List": "Insertar lista numérica"
       "Insert table": "Insertar Tabla"
-      "Insert Unordered List": "Insertar Lista viÃ±etas"
+      "Insert Unordered List": "Insertar Lista viñetas"
       "Italic": "Cursiva"
       "Justify Center": "Centrar"
       "Justify Full": "Justificar"
       "Justify Left": "Alinear a la Izquierda"
       "Justify Right": "Alinear a la derecha"
       "Left to Right": "Izquierda a derecha"
-      "Outdent": "Quitar SangrÃ­a"
+      "Outdent": "Quitar Sangría"
       "Paste": "Pegar"
       "Redo": "Restaurar"
       "Remove formatting": "Quitar Formato"
       "Right to Left": "Derecha a izquierda"
       "Strike-through": "Invertir"
-      "Subscript": "SubÃ­ndice"
-      "Superscript": "SuperÃ­ndice"
+      "Subscript": "Subíndice"
+      "Superscript": "Superíndice"
       "Underline": "Subrayar"
       "Undo": "Deshacer"
 
