--- a/config/locales/widgets/es.names.yml
+++ b/config/locales/widgets/es.names.yml
@@ -21,7 +21,7 @@ es:
       menu: "Menú"
       products: "Productos / Servicios"
       property-listings: "Avisos de Inmuebles"
-      reviews: "Revisiones"
+      reviews: "Crticas"
       rss-feed: "Suscripción RSS"
-      tell-a-friend: "Comentar Con Un Amigo"
+      tell-a-friend: "Comentar con Amigos"
       twitter: "Twitter"
