--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -245,6 +245,7 @@ es:
     instructions: "@@Enter your call back information:"
     confirmation: "@@Your call back request has been sent to %{company_name}. Thank you."
     email:
+      subject: "@@You have a call back request."
       body: "@@A visitor sent you a call back request from: %{site_url}"
 
   tell_a_friend:
@@ -262,6 +263,7 @@ es:
     date: "@@Date:"
     confirmation: "@@Your booking request has been sent to %{company_name}."
     email:
+      subject: "@@You have a booking request."
       body: "@@A visitor sent you a booking request from: %{site_url}"
 
   keep_me_informed:
