--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -240,7 +240,7 @@ en:
       time: "Time: "
       date: "Date: "
       message: "Message: "
-      closing: "Thank You"
+      closing: "Thank You,"
       signature: '<a href="http://www.yomobi.com">YoMobi</a>'
       create_site: 'Create your own free mobile site at: <a href="http://www.yomobi.com">YoMobi.com</a>'
 
