--- a/config/locales/es.countries.yml
+++ b/config/locales/es.countries.yml
@@ -1,270 +1,257 @@
 es:
   countries:
-    AD: "@@Andorra"
-    AE: "@@United Arab Emirates"
-    AF: "@@Afghanistan"
-    AG: "@@Antigua and Barbuda"
-    AI: "@@Anguilla"
-    AL: "@@Albania"
-    AM: "@@Armenia"
-    AN: "@@Netherlands Antilles"
-    AO: "@@Angola"
-    AQ: "@@Antarctica"
-    AR: "@@Argentina"
-    AS: "@@American Samoa"
-    AT: "@@Austria"
-    AU: "@@Australia"
-    AW: "@@Aruba"
-    AX: "@@Aland Islands"
-    AZ: "@@Azerbaijan"
-    BA: "@@Bosnia and Herzegovina"
-    BB: "@@Barbados"
-    BD: "@@Bangladesh"
-    BE: "@@Belgium"
-    BF: "@@Burkina Faso"
-    BG: "@@Bulgaria"
-    BH: "@@Bahrain"
-    BI: "@@Burundi"
-    BJ: "@@Benin"
-    BL: "@@Saint Barthélemy"
-    BM: "@@Bermuda"
-    BN: "@@Brunei"
-    BO: "@@Bolivia"
-    BQ: "@@British Antarctic Territory"
-    BR: "@@Brazil"
-    BS: "@@Bahamas"
-    BT: "@@Bhutan"
-    BV: "@@Bouvet Island"
-    BW: "@@Botswana"
-    BY: "@@Belarus"
-    BZ: "@@Belize"
-    CA: "@@Canada"
-    CC: "@@Cocos Islands"
-    CD: "@@Congo - Kinshasa"
-    CF: "@@Central African Republic"
-    CG: "@@Congo - Brazzaville"
-    CH: "@@Switzerland"
-    CI: "@@Ivory Coast"
-    CK: "@@Cook Islands"
-    CL: "@@Chile"
-    CM: "@@Cameroon"
-    CN: "@@China"
-    CO: "@@Colombia"
-    CR: "@@Costa Rica"
-    CS: "@@Serbia and Montenegro"
-    CT: "@@Canton and Enderbury Islands"
-    CU: "@@Cuba"
-    CV: "@@Cape Verde"
-    CX: "@@Christmas Island"
-    CY: "@@Cyprus"
-    CZ: "@@Czech Republic"
-    DD: "@@East Germany"
-    DE: "@@Germany"
-    DJ: "@@Djibouti"
-    DK: "@@Denmark"
-    DM: "@@Dominica"
-    DO: "@@Dominican Republic"
-    DZ: "@@Algeria"
-    EC: "@@Ecuador"
-    EE: "@@Estonia"
-    EG: "@@Egypt"
-    EH: "@@Western Sahara"
-    ER: "@@Eritrea"
-    ES: "@@Spain"
-    ET: "@@Ethiopia"
-    FI: "@@Finland"
-    FJ: "@@Fiji"
-    FK: "@@Falkland Islands"
-    FM: "@@Micronesia"
-    FO: "@@Faroe Islands"
-    FQ: "@@French Southern and Antarctic Territories"
-    FR: "@@France"
-    FX: "@@Metropolitan France"
-    GA: "@@Gabon"
-    GB: "@@United Kingdom"
-    GD: "@@Grenada"
-    GE: "@@Georgia"
-    GF: "@@French Guiana"
-    GG: "@@Guernsey"
-    GH: "@@Ghana"
-    GI: "@@Gibraltar"
-    GL: "@@Greenland"
-    GM: "@@Gambia"
-    GN: "@@Guinea"
-    GP: "@@Guadeloupe"
-    GQ: "@@Equatorial Guinea"
-    GR: "@@Greece"
-    GS: "@@South Georgia and the South Sandwich Islands"
-    GT: "@@Guatemala"
-    GU: "@@Guam"
-    GW: "@@Guinea-Bissau"
-    GY: "@@Guyana"
-    HK: "@@Hong Kong SAR China"
-    HK: "@@Hong Kong"
-    HM: "@@Heard Island and McDonald Islands"
-    HN: "@@Honduras"
-    HR: "@@Croatia"
-    HT: "@@Haiti"
-    HU: "@@Hungary"
-    ID: "@@Indonesia"
-    IE: "@@Ireland"
-    IL: "@@Israel"
-    IM: "@@Isle of Man"
-    IN: "@@India"
-    IO: "@@British Indian Ocean Territory"
-    IQ: "@@Iraq"
-    IR: "@@Iran"
-    IS: "@@Iceland"
-    IT: "@@Italy"
-    JE: "@@Jersey"
-    JM: "@@Jamaica"
-    JO: "@@Jordan"
-    JP: "@@Japan"
-    JT: "@@Johnston Island"
-    KE: "@@Kenya"
-    KG: "@@Kyrgyzstan"
-    KH: "@@Cambodia"
-    KI: "@@Kiribati"
-    KM: "@@Comoros"
-    KN: "@@Saint Kitts and Nevis"
-    KP: "@@North Korea"
-    KR: "@@South Korea"
-    KW: "@@Kuwait"
-    KY: "@@Cayman Islands"
-    KZ: "@@Kazakhstan"
-    LA: "@@Laos"
-    LB: "@@Lebanon"
-    LC: "@@Saint Lucia"
-    LI: "@@Liechtenstein"
-    LK: "@@Sri Lanka"
-    LR: "@@Liberia"
-    LS: "@@Lesotho"
-    LT: "@@Lithuania"
-    LU: "@@Luxembourg"
-    LV: "@@Latvia"
-    LY: "@@Libya"
-    MA: "@@Morocco"
-    MC: "@@Monaco"
-    MD: "@@Moldova"
-    ME: "@@Montenegro"
-    MF: "@@Saint Martin"
-    MG: "@@Madagascar"
-    MH: "@@Marshall Islands"
-    MI: "@@Midway Islands"
-    MK: "@@Macedonia"
-    ML: "@@Mali"
-    MM: "@@Myanmar"
-    MN: "@@Mongolia"
-    MO: "@@Macau SAR China"
-    MO: "@@Macau"
-    MP: "@@Northern Mariana Islands"
-    MQ: "@@Martinique"
-    MR: "@@Mauritania"
-    MS: "@@Montserrat"
-    MT: "@@Malta"
-    MU: "@@Mauritius"
-    MV: "@@Maldives"
-    MW: "@@Malawi"
-    MX: "@@Mexico"
-    MY: "@@Malaysia"
-    MZ: "@@Mozambique"
-    NA: "@@Namibia"
-    NC: "@@New Caledonia"
-    NE: "@@Niger"
-    NF: "@@Norfolk Island"
-    NG: "@@Nigeria"
-    NI: "@@Nicaragua"
-    NL: "@@Netherlands"
-    NO: "@@Norway"
-    NP: "@@Nepal"
-    NQ: "@@Dronning Maud Land"
-    NR: "@@Nauru"
-    NT: "@@Neutral Zone"
-    NU: "@@Niue"
-    NZ: "@@New Zealand"
-    OM: "@@Oman"
-    PA: "@@Panama"
-    PC: "@@Pacific Islands Trust Territory"
-    PE: "@@Peru"
-    PF: "@@French Polynesia"
-    PG: "@@Papua New Guinea"
-    PH: "@@Philippines"
-    PK: "@@Pakistan"
-    PL: "@@Poland"
-    PM: "@@Saint Pierre and Miquelon"
-    PN: "@@Pitcairn"
-    PR: "@@Puerto Rico"
-    PS: "@@Palestinian Territory"
-    PT: "@@Portugal"
-    PU: "@@U.S. Miscellaneous Pacific Islands"
-    PW: "@@Palau"
-    PY: "@@Paraguay"
-    PZ: "@@Panama Canal Zone"
-    QA: "@@Qatar"
-    QO: "@@Outlying Oceania"
-    QU: "@@European Union"
-    RE: "@@Reunion"
-    RO: "@@Romania"
-    RS: "@@Serbia"
-    RU: "@@Russia"
-    RW: "@@Rwanda"
-    SA: "@@Saudi Arabia"
-    SB: "@@Solomon Islands"
-    SC: "@@Seychelles"
-    SD: "@@Sudan"
-    SE: "@@Sweden"
-    SG: "@@Singapore"
-    SH: "@@Saint Helena"
-    SI: "@@Slovenia"
-    SJ: "@@Svalbard and Jan Mayen"
-    SK: "@@Slovakia"
-    SL: "@@Sierra Leone"
-    SM: "@@San Marino"
-    SN: "@@Senegal"
-    SO: "@@Somalia"
-    SR: "@@Suriname"
-    ST: "@@Sao Tome and Principe"
-    SU: "@@Union of Soviet Socialist Republics"
-    SV: "@@El Salvador"
-    SY: "@@Syria"
-    SZ: "@@Swaziland"
-    TC: "@@Turks and Caicos Islands"
-    TD: "@@Chad"
-    TF: "@@French Southern Territories"
-    TG: "@@Togo"
-    TH: "@@Thailand"
-    TJ: "@@Tajikistan"
-    TK: "@@Tokelau"
-    TL: "@@East Timor"
-    TM: "@@Turkmenistan"
-    TN: "@@Tunisia"
-    TO: "@@Tonga"
-    TR: "@@Turkey"
-    TT: "@@Trinidad and Tobago"
-    TV: "@@Tuvalu"
-    TW: "@@Taiwan"
-    TZ: "@@Tanzania"
-    UA: "@@Ukraine"
-    UG: "@@Uganda"
-    UM: "@@United States Minor Outlying Islands"
-    US: "@@United States"
-    UY: "@@Uruguay"
-    UZ: "@@Uzbekistan"
-    VA: "@@Vatican"
-    VC: "@@Saint Vincent and the Grenadines"
-    VD: "@@North Vietnam"
-    VE: "@@Venezuela"
-    VG: "@@British Virgin Islands"
-    VI: "@@U.S. Virgin Islands"
-    VN: "@@Vietnam"
-    VU: "@@Vanuatu"
-    WF: "@@Wallis and Futuna"
-    WK: "@@Wake Island"
-    WS: "@@Samoa"
-    YD: "@@People's Democratic Republic of Yemen"
-    YE: "@@Yemen"
-    YT: "@@Mayotte"
-    ZA: "@@South Africa"
-    ZM: "@@Zambia"
-    ZW: "@@Zimbabwe"
-    ZZ: "@@Unknown or Invalid Region"
+    AD: "Andorra"
+    AE: "Emiratos Árabes Unidos"
+    AF: "Afganistán"
+    AG: "Antigua y Barbuda"
+    AI: "Anguila"
+    AL: "Albania"
+    AM: "Armenia"
+    AN: "Antillas Neerlandesas"
+    AO: "Angola"
+    AQ: "Antártida"
+    AR: "Argentina"
+    AS: "Samoa Americana"
+    AT: "Austria"
+    AU: "Australia"
+    AW: "Aruba"
+    AX: "Åland"
+    AZ: "Azerbaiyán"
+    BA: "Bosnia y Herzegovina"
+    BB: "Barbados"
+    BD: "Bangladesh"
+    BE: "Bélgica"
+    BF: "Burkina Faso"
+    BG: "Bulgaria"
+    BH: "Bahréin"
+    BI: "Burundi"
+    BJ: "Benín"
+    BL: "San Bartolomé"
+    BM: "Bermudas"
+    BN: "Brunéi"
+    BO: "Bolivia"    
+    BR: "Brasil"
+    BS: "Bahamas"
+    BT: "Bután"
+    BV: "Isla Bouvet"
+    BW: "Botsuana"
+    BY: "Bielorrusia"
+    BZ: "Belice"
+    CA: "Canadá"
+    CC: "Islas Cocos"
+    CD: "República Democrática del Congo"
+    CF: "República Centroafricana"
+    CG: "República del Congo"
+    CH: "Suiza"
+    CI: "Costa de Marfil"
+    CK: "Islas Cook"
+    CL: "Chile"
+    CM: "Camerún"
+    CN: "China"
+    CO: "Colombia"
+    CR: "Costa Rica"
+    CS: "Serbia y Montenegro"
+    CT: "Cantón y las Islas Enderbury"
+    CU: "Cuba"
+    CV: "Cabo Verde"
+    CX: "Isla de Navidad"
+    CY: "Chipre"
+    CZ: "República Checa"
+    DE: "Alemania"
+    DJ: "Yibuti"
+    DK: "Dinamarca"
+    DM: "Dominica"
+    DO: "República Dominicana"
+    DZ: "Argelia"
+    EC: "Ecuador"
+    EE: "Estonia"
+    EG: "Egipto"
+    EH: "República Árabe Saharaui Democrática"
+    ER: "Eritrea"
+    ES: "España"
+    ET: "Etiopía"
+    FI: "Finlandia"
+    FJ: "Fiyi"
+    FK: "Islas Malvinas"
+    FM: "Micronesia"
+    FO: "Islas Feroe"
+    FR: "Francia"
+    GA: "Gabón"
+    GB: "Reino Unido"
+    GD: "Granada"
+    GE: "Georgia"
+    GF: "Guayana Francesa"
+    GG: "Guernsey"
+    GH: "Ghana"
+    GI: "Gibraltar"
+    GL: "Groenlandia"
+    GM: "Gambia"
+    GN: "Guinea"
+    GP: "Guadalupe"
+    GQ: "Guinea Ecuatorial"
+    GR: "Grecia"
+    GS: "Islas Georgias del Sur y Sandwich del Sur"
+    GT: "Guatemala"
+    GU: "Guam"
+    GW: "Guinea-Bissau"
+    GY: "Guyana"
+    HK: "Hong Kong"
+    HM: "Islas Heard y McDonald"
+    HN: "Honduras"
+    HR: "Croacia"
+    HT: "Haití"
+    HU: "Hungría"
+    ID: "Indonesia"
+    IE: "Irlanda"
+    IL: "Israel"
+    IM: "Isla de Man"
+    IN: "India"
+    IO: "Territorio Británico del Océano Índico"
+    IQ: "Iraq"
+    IR: "Irán"
+    IS: "Islandia"
+    IT: "Italia"
+    JE: "Jersey"
+    JM: "Jamaica"
+    JO: "Jordania"
+    JP: "Japón"
+    JT: "La isla de Johnston"
+    KE: "Kenia"
+    KG: "Kirguistán"
+    KH: "Camboya"
+    KI: "Kiribati"
+    KM: "Comoras"
+    KN: "San Cristóbal y Nieves"
+    KP: "Corea del Norte"
+    KR: "Corea del Sur"
+    KW: "Kuwait"
+    KY: "Islas Caimán"
+    KZ: "Kazajistán"
+    LA: "Laos"
+    LB: "Líbano"
+    LC: "Santa Lucía"
+    LI: "Liechtenstein"
+    LK: "Sri Lanka"
+    LR: "Liberia"
+    LS: "Lesoto"
+    LT: "Lituania"
+    LU: "Luxemburgo"
+    LV: "Letonia"
+    LY: "Libia"
+    MA: "Marruecos"
+    MC: "Mónaco"
+    MD: "Moldavia"
+    ME: "Montenegro"
+    MF: "San Martín"
+    MG: "Madagascar"
+    MH: "Islas Marshall" 
+    MI: "Islas Midway"
+    MK: "República de Macedonia"
+    ML: "Malí"
+    MM: "Birmania"
+    MN: "Mongolia"
+    MO: "Macao"
+    MP: "Islas Marianas del Norte"
+    MQ: "Martinica"
+    MR: "Mauritania"
+    MS: "Montserrat"
+    MT: "Malta"
+    MU: "Mauricio"
+    MV: "Maldivas"
+    MW: "Malaui"
+    MX: "México"
+    MY: "Malasia"
+    MZ: "Mozambique"
+    NA: "Namibia"
+    NC: "Nueva Caledonia"
+    NE: "Níger"
+    NF: "Norfolk"
+    NG: "Nigeria"
+    NI: "Nicaragua"
+    NL: "Países Bajos"
+    NO: "Noruega"
+    NP: "Nepal"
+    NR: "Nauru"
+    NU: "Niue"
+    NZ: "Nueva Zelanda"
+    OM: "Omán"
+    PA: "Panamá"
+    PC: "Islas del Pacífico Territorio en Fideicomiso"
+    PE: "Perú"
+    PF: "Polinesia Francesa"
+    PG: "Papúa Nueva Guinea"
+    PH: "Filipinas"
+    PK: "Pakistán"
+    PL: "Polonia"
+    PM: "San Pedro y Miquelón"
+    PN: "Islas Pitcairn"
+    PR: "Puerto Rico"
+    PS: "Territorios Palestinos"
+    PT: "Portugal"
+    PW: "Palaos"
+    PY: "Paraguay"
+    PZ: "Panama Canal Zone"
+    QA: "Qatar"
+    QU: "Unión Europea"
+    RE: "Reunión"
+    RO: "Rumania"
+    RS: "Serbia"
+    RU: "Rusia"
+    RW: "Ruanda"
+    SA: "Arabia Saudita"
+    SB: "Islas Salomón"
+    SC: "Seychelles"
+    SD: "Sudán"
+    SE: "Suecia"
+    SG: "Singapur"
+    SH: "Santa Helena"
+    SI: "Eslovenia"
+    SJ: "Svalbard y Jan Mayen"
+    SK: "Eslovaquia"
+    SL: "Sierra Leona"
+    SM: "San Marino"
+    SN: "Senegal"
+    SO: "Somalia"
+    SR: "Surinam"
+    ST: "Santo Tomé y Príncipe"
+    SV: "El Salvador"
+    SY: "Siria"
+    SZ: "Suazilandia"
+    TC: "Islas Turcas y Caicos"
+    TD: "Chad"
+    TF: "Territorios Australes Franceses"
+    TG: "Togo"
+    TH: "Tailandia"
+    TJ: "Tayikistán"
+    TK: "Tokelau"
+    TL: "Timor Oriental"
+    TM: "Turkmenistán"
+    TN: "Túnez"
+    TO: "Tonga"
+    TR: "Turquía"
+    TT: "Trinidad y Tobago"
+    TV: "Tuvalu"
+    TW: "Taiwán"
+    TZ: "Tanzania"
+    UA: "Ucrania"
+    UG: "Uganda"
+    UM: "Islas ultramarinas de Estados Unidos"
+    US: "Estados Unidos"
+    UY: "Uruguay"
+    UZ: "Uzbekistán"
+    VA: "Ciudad del Vaticano"
+    VC: "San Vicente y las Granadinas"
+    VE: "Venezuela"
+    VG: "Islas Vírgenes Británicas"
+    VI: "Islas Vírgenes de los Estados Unidos"
+    VN: "Vietnam"
+    VU: "Vanuatu"
+    WF: "Wallis y Futuna"
+    WK: "Isla Wake"    
+    WS: "Samoa"
+    YE: "Yemen"
+    YT: "Mayotte"
+    ZA: "Sudáfrica"
+    ZM: "Zambia"
+    ZW: "Zimbabue"
+    ZZ: "Unknown or Invalid Region"
