--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -492,7 +492,7 @@ en:
     site_name: "Site Name:"
     site_details: "Site Details"
     select_site: "Please select a site on the left."
-    selected_site: "Selected: %{site_name}"
+    selected_site: "Manage: %{site_name}"
     edit_site: "Edit Site"
     generate_signup_key: "Generate Signup Key"
     site_access_list: "Sites you have access to:"
