i18n: Updated map view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -164,14 +164,14 @@ en:
     signup_key: "Signup Key:"
     sign_up: "Sign Up"
     sign_up_bar: "YoMobi helps you reach more people with a mobile optimized website."
-    already_member: "Already a Member?"
+    already_member: "Already a Member? "
     click_to_signin: "Click here to sign in."
     error:
       general: "There was problem with your request:"
       recaptcha: "There was an error with the recaptcha code below. Please re-enter the code and click submit."
 
   recaptcha:
-    type_words: "Type the two words:  "
+    type_words: "Type the two words: "
     new_words: "(Get New Words)"
 
   confirm_account:
@@ -230,20 +230,6 @@ en:
       closing: "Thank you,"
       signature: "Yomobi Support"
       contact: '<a href="mailto:support@yomobi.com">support@yomobi.com</a>'
-
-  mobile:
-    email:
-      name: "Name: "
-      email: "Email: "
-      subject: "Subject: "
-      phone: "Phone: "
-      num_people: "Number of people: "
-      time: "Time: "
-      date: "Date: "
-      message: "Message: "
-      closing: "Thank You,"
-      signature: '<a href="http://www.yomobi.com">YoMobi</a>'
-      create_site: 'Create your own free mobile site at: <a href="http://www.yomobi.com">YoMobi.com</a>'
 
   leave_a_message:
     instructions: "Leave a message:"
@@ -618,11 +604,30 @@ en:
       home: "Home"
     form:
       email: "Email Address:"
+      address: "Address:"
       name: "Name:"
       phone_number: "Phone Number:"
       your_name: "Your Name:"
       security: "Please solve this security question:"
       send: "Send"
+      get_directions: "Get Directions: "
+      starting_address: "Starting Address: "
+      view_in_map: "View in Map"
+      map_it: "Map It"
+
+    email:
+      name: "Name: "
+      email: "Email: "
+      subject: "Subject: "
+      phone: "Phone: "
+      num_people: "Number of people: "
+      time: "Time: "
+      date: "Date: "
+      message: "Message: "
+      closing: "Thank You,"
+      signature: '<a href="http://www.yomobi.com">YoMobi</a>'
+      create_site: 'Create your own free mobile site at: <a href="http://www.yomobi.com">YoMobi.com</a>'
+
 
   widgets:
     helpText:
