--- a/config/locales/widgets/es.types.yml
+++ b/config/locales/widgets/es.types.yml
@@ -1,57 +1,57 @@
 es:
   widgets:
     types:
-      "Airport": "@@Airport"
-      "Arts / Entertainment / Nightlife": "@@Arts / Entertainment / Nightlife"
-      "Attractions / Things to Do": "@@Attractions / Things to Do"
-      "Automotive": "@@Automotive"
-      "Bank / Financial Services": "@@Bank / Financial Services"
-      "Bar": "@@Bar"
-      "Book Store": "@@Book Store"
-      "Business Services": "@@Business Services"
-      "Church / Religious Organization": "@@Church / Religious Organization"
-      "Club": "@@Club"
-      "Community / Government": "@@Community / Government"
-      "Computers / Technology": "@@Computers / Technology"
-      "Concert Venue": "@@Concert Venue"
-      "Consulting / Business Services": "@@Consulting / Business Services"
-      "Education": "@@Education"
-      "Energy / Utility": "@@Energy / Utility"
-      "Engineering / Construction": "@@Engineering / Construction"
-      "Event Planning / Event Services": "@@Event Planning / Event Services"
-      "Food / Grocery": "@@Food / Grocery"
-      "Government Organization": "@@Government Organization"
-      "Health / Medical / Pharmacy": "@@Health / Medical / Pharmacy"
-      "Home Improvement": "@@Home Improvement"
-      "Hospital / Clinic": "@@Hospital / Clinic"
-      "Hotel": "@@Hotel"
-      "Individual / Personal Site": "@@Individual / Personal Site"
-      "Insurance Company": "@@Insurance Company"
-      "Internet / Software": "@@Internet / Software"
-      "Legal / Law": "@@Legal / Law"
-      "Library": "@@Library"
-      "Local / Small Business": "@@Local / Small Business"
-      "Media / News / Publishing": "@@Media / News / Publishing"
-      "Movie Theater": "@@Movie Theater"
-      "Museum / Art Gallery": "@@Museum / Art Gallery"
-      "Non-Governmental Organization (NGO)": "@@Non-Governmental Organization (NGO)"
-      "Non-Profit Organization": "@@Non-Profit Organization"
-      "Organization": "@@Organization"
-      "Other": "@@Other"
-      "Pet Services": "@@Pet Services"
-      "Political Party / Organization": "@@Political Party / Organization"
-      "Professional Services": "@@Professional Services"
-      "Public Places": "@@Public Places"
-      "Real Estate": "@@Real Estate"
-      "Restaurant / Cafe": "@@Restaurant / Cafe"
-      "Retail and Consumer Merchandise": "@@Retail and Consumer Merchandise"
-      "School": "@@School"
-      "Shopping / Retail": "@@Shopping / Retail"
-      "Spas / Beauty / Personal Care": "@@Spas / Beauty / Personal Care"
-      "Sports / Recreation / Activities": "@@Sports / Recreation / Activities"
-      "Sports Venue": "@@Sports Venue"
-      "Tours / Sightseeing": "@@Tours / Sightseeing"
-      "Transit Stop": "@@Transit Stop"
-      "Transportation": "@@Transportation"
-      "Travel / Leisure": "@@Travel / Leisure"
-      "University": "@@University"
+      "Airport": "Aeropuerto"
+      "Arts / Entertainment / Nightlife": "Artes / Entretenimiento / Vida Nocturna"
+      "Attractions / Things to Do": "Atractivos / Cosas Que Hacer"
+      "Automotive": "Automovilismo"
+      "Bank / Financial Services": "Banca / Servicios Financieros"
+      "Bar": "Bar"
+      "Book Store": "Librería"
+      "Business Services": "Servicio a Negocios"
+      "Church / Religious Organization": "Iglesia / Organización Religiosa"
+      "Club": "Club"
+      "Community / Government": "Comunidad / Gobierno"
+      "Computers / Technology": "Computación / Tecnología"
+      "Concert Venue": "Escenario de Conciertos"
+      "Consulting / Business Services": "Consultores / Servicios para Negocios"
+      "Education": "Educación"
+      "Energy / Utility": "Energía / Servicios"
+      "Engineering / Construction": "Ingeniería / Construcción"
+      "Event Planning / Event Services": "Planeación de Eventos / Servicio de Eventos"
+      "Food / Grocery": "Comida / Abarrotes"
+      "Government Organization": "Organización de Gobierno"
+      "Health / Medical / Pharmacy": "Salud / Médico / Farmacia"
+      "Home Improvement": "Mantenimiento del Hogar"
+      "Hospital / Clinic": "Hospital / Clínica"
+      "Hotel": "Hotel"
+      "Individual / Personal Site": "Individual / Sitio Personal"
+      "Insurance Company": "Compañía de Seguros"
+      "Internet / Software": "Internet / Software"
+      "Legal / Law": "Legal / Abogados"
+      "Library": "Biblioteca"
+      "Local / Small Business": "Local / Pequeños Negocios"
+      "Media / News / Publishing": "Media / Noticias / Editorial"
+      "Movie Theater": "Sala de Cine"
+      "Museum / Art Gallery": "Museo / Galería de Arte"
+      "Non-Governmental Organization (NGO)": "Organización No Gubernamental (ONG)"
+      "Non-Profit Organization": "Organización No Lucrativa"
+      "Organization": "Organización"
+      "Other": "Otro"
+      "Pet Services": "Servicios para Mascotas"
+      "Political Party / Organization": "Partido Político / Organización"
+      "Professional Services": "Servicios Profesionales"
+      "Public Places": "Lugares Públicos"
+      "Real Estate": "Bienes Raíces"
+      "Restaurant / Cafe": "Restaurante / Café"
+      "Retail and Consumer Merchandise": "Bienes de Consumo al Menudeo"
+      "School": "Escuela"
+      "Shopping / Retail": "Plaza Comercial de Venta al Menudeo"
+      "Spas / Beauty / Personal Care": "Spa / Belleza / Cuidado Personal"
+      "Sports / Recreation / Activities": "Deportes / Recreación / Actividades"
+      "Sports Venue": "Instalaciones Deportivas"
+      "Tours / Sightseeing": "Paseos / Al Aire Libre"
+      "Transit Stop": "Parada de Tránsito"
+      "Transportation": "Transportación"
+      "Travel / Leisure": "Viajes / Tiempo Libre"
+      "University": "Universidad"
