i18n: Updated Rename Widget dialog errors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,6 +105,13 @@ en:
       unsavedChangesText: "You have unsaved changes. Click OK to go back and save changes. Click Cancel to discard your changes."
       invalid_widget: "This widget will <b>NOT</b> appear on your mobile site because required information is missing.<br /><br />Please click on this widget to edit. Remember to <b>Save Changes</b> when you are done."
       deactivated_widget: "You have deactivated this widget; it <b>WILL NOT</b> appear on your mobile site.<br /><br />To undo this, please click this widget and uncheck the \"Deactivate\" checkbox."
+      name_already_in_use: "Name already in use."
+      name_too_short: "Name is too short (minimum 2 characters)."
+      name_too_long: "Name is too long."
+      name_reserved: "Sorry, that name is reserved."
+      save_name: "Save Name"
+      add_new_widget: "Add New Widget"
+      cancel: "Cancel"
 
 
     site_manager:
