--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,8 @@ en:
     close: "Close"
     create: "Create"
 
+    error: "Error"
+
     delete_widget: "Are you sure you want to delete this widget?\n(all data will be lost)"
 
     wysiwyg:
