--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -62,6 +62,8 @@ es:
     close: "@@Close"
     create: "@@Create"
 
+    error: "@@Error"
+
     delete_widget: "@@Are you sure you want to delete this widget?\n(all data will be lost)"
 
     wysiwyg:
